--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Flask==3.0.0
-flask-cors==4.0.0
-yfinance==0.2.32
-pandas==2.1.3
-numpy==1.26.2
-requests==2.31.0
-Werkzeug==3.0.1
-gunicorn==21.2.0
+Flask>=3.0.0
+flask-cors>=4.0.0
+yfinance>=0.2.30
+pandas>=2.0.0
+numpy>=1.24.0
+requests>=2.31.0
+gunicorn>=21.2.0
